# gml_reader

./: .gitignore  CMakeLists.txt  package.xml
include/: arc.h  graph.h  node.h  utils.h
include/gmlreader/: gmlreader.hpp  gmlwriter.hpp  graphmsgs_wrapper.hpp  lemon_wrapper.hpp
src/: arc.cpp  graph.cpp  main.cpp  node.cpp  testgml.cpp
